feat: build login endpoint
