# apps/auth-service/src/routes/auth.router.ts
@@ -1,8 +1,9 @@
 import { Router } from "express";
-import { userRegisteration, verifyUser } from "../controller/auth.controller";
+import { loginUser, userRegisteration, verifyUser } from "../controller/auth.controller";
 
 const router = Router();
 router.post('/user-registeration', userRegisteration)
 router.post('/verify-user', verifyUser)
+router.post('/login', loginUser)
 
 export default router; 
